[gd_scene load_steps=12 format=3 uid="uid://fxuwfdlddmhd"]

[ext_resource type="Script" path="res://Rooms/Room1.gd" id="1_y75r2"]
[ext_resource type="TileSet" uid="uid://dasdagv25fusk" path="res://Rooms/Room1.tres" id="2_xla1n"]
[ext_resource type="Script" path="res://Rooms/DoorCollider.gd" id="3_cg03b"]
[ext_resource type="PackedScene" uid="uid://nheg25pek2nv" path="res://WaterDeco/small_container.tscn" id="4_x5hcd"]
[ext_resource type="PackedScene" uid="uid://b5qcg20or457l" path="res://WaterDeco/large_container.tscn" id="5_i2w3a"]
[ext_resource type="PackedScene" uid="uid://caho3udchbjg4" path="res://small_pipe_h.tscn" id="6_8s0j3"]
[ext_resource type="AudioStream" uid="uid://b3poxbju1j6c1" path="res://door_open.wav" id="7_ahbx5"]
[ext_resource type="AudioStream" uid="uid://1nhelq0cxx1n" path="res://door_close.wav" id="8_e0jl1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ajoj8"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_l6glw"]
vertices = PackedVector2Array(556, -393, 535, 778, 153, 153, 153, -181, -388, -346, -181, -181, -523, 791, -181, 153, -96, 153, -96, 267, 67, 267, 67, 153, 104, 104, 19, 104, 10, 96, 10, 47, 10, -47, 10, -96, 104, -133, -133, -133, -39, -96, -133, 104, -39, -47, -47, 104, 19, 218, -47, 218, -39, 96, -39, 47)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(4, 0, 3, 5), PackedInt32Array(6, 4, 5, 7), PackedInt32Array(7, 8, 9, 6), PackedInt32Array(1, 6, 9, 10), PackedInt32Array(2, 1, 10, 11), PackedInt32Array(12, 13, 14, 15), PackedInt32Array(16, 17, 18, 12), PackedInt32Array(19, 18, 17, 20), PackedInt32Array(21, 19, 20, 22, 23), PackedInt32Array(14, 13, 24, 25, 23, 26), PackedInt32Array(16, 12, 15), PackedInt32Array(16, 15, 27, 22), PackedInt32Array(23, 22, 27), PackedInt32Array(23, 27, 26)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-397, -356, -535, 802, 545, 788, 567, -404)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qbpct"]
size = Vector2(29, 25)

[node name="RoomBase" type="StaticBody2D"]
position = Vector2(14, 0)
collision_layer = 16
collision_mask = 5
physics_material_override = SubResource("PhysicsMaterial_ajoj8")
script = ExtResource("1_y75r2")
end_door_tile = Vector2i(-1, -6)
start_door_tile = Vector2i(-1, 8)
end_door_rotation = "south"
start_door_rotation = "north"
metadata/Type = "E"
metadata/_edit_horizontal_guides_ = [1307.0]

[node name="Spawn" type="Node2D" parent="."]
position = Vector2(-14, 212)

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
navigation_polygon = SubResource("NavigationPolygon_l6glw")

[node name="TileMap" type="TileMap" parent="NavigationRegion2D"]
z_index = -1
texture_filter = 1
scale = Vector2(1.78172, 1.78172)
tile_set = ExtResource("2_xla1n")
format = 2
layer_0/name = "Walls"
layer_0/z_index = 1
layer_0/navigation_enabled = false
layer_0/tile_data = PackedInt32Array(327676, 131072, 0, 393213, 131072, 1342177280, 458749, 131072, 1342177280, 524285, 131072, 1342177280, 589822, 131072, 0, 589823, 131072, 1, 524288, 131072, 0, 458753, 131072, 1610612736, 393217, 131072, 1610612736, 327681, 131072, 1610612736, 262145, 196608, 1610612736, 262146, 131072, 0, 262147, 131072, 0, 327675, 131072, 0, 262138, 131072, 1342177280, 131066, 131072, 1342177280, 65530, 131072, 1342177280, -6, 131072, 1342177280, 196602, 131072, 1342177280, -65542, 131072, 1342177280, -131078, 131072, 1342177280, -196614, 131072, 1342177280, -262150, 131072, 1342177280, -327685, 131072, 805306368, -327684, 131072, 805306368, -327683, 131072, 805306368, -393216, 131072, 805306368, -327681, 131072, 805306369, -327682, 131072, 805306368, -393215, 131072, 805306368, -393214, 131072, 805306368, -393213, 131072, 805306368, -327676, 131072, 1610612736, -262140, 131072, 1610612736, -196604, 131072, 1610612736, -131068, 131072, 1610612736, -65532, 131072, 1610612736, 4, 131072, 1610612736, 65540, 131072, 1610612736, 131076, 131072, 1610612736, 196612, 131072, 1610612736, 327674, 0, 1610612736, 262148, 0, 805306368, -393212, 0, 1342177280, -327686, 0, 0, 327677, 196608, 0, 589821, 0, 1610612736, 524289, 0, 805306368)
layer_1/name = "Floor"
layer_1/tile_data = PackedInt32Array(-196612, 327680, 0, -131076, 327680, 0, -65540, 327680, 0, -4, 327680, 0, -196611, 327680, 0, -131075, 327680, 0, -65539, 327680, 0, -3, 327680, 0, -196610, 327680, 0, -131074, 327680, 0, -65538, 327680, 0, -2, 327680, 0, -196609, 327680, 0, -131073, 327680, 0, -65537, 327680, 0, -1, 327680, 0, -262144, 327680, 0, -196608, 327680, 0, -131072, 327680, 0, -65536, 327680, 0, -262143, 327680, 0, -196607, 327680, 0, -131071, 327680, 0, -65535, 327680, 0, -262142, 327680, 0, -196606, 327680, 0, -131070, 327680, 0, -65534, 327680, 0, -262141, 327680, 0, -196605, 327680, 0, -131069, 327680, 0, -65533, 327680, 0, 65532, 327680, 0, 131068, 327680, 0, 196604, 327680, 0, 262140, 327680, 0, 65533, 327680, 0, 131069, 327680, 0, 196605, 327680, 0, 262141, 327680, 0, 65534, 327680, 0, 131070, 327680, 0, 196606, 327680, 0, 262142, 327680, 0, 65535, 327680, 0, 131071, 327680, 0, 196607, 327680, 0, 262143, 327680, 0, 0, 327680, 0, 65536, 327680, 0, 131072, 327680, 0, 196608, 327680, 0, 1, 327680, 0, 65537, 327680, 0, 131073, 327680, 0, 196609, 327680, 0, 2, 327680, 0, 65538, 327680, 0, 131074, 327680, 0, 196610, 327680, 0, 3, 327680, 0, 65539, 327680, 0, 131075, 327680, 0, 196611, 327680, 0, 327679, 327680, 0, 393215, 327680, 0, 458751, 327680, 0, 524287, 327680, 0, 262144, 327680, 0, 327680, 327680, 0, 393216, 327680, 0, 458752, 327680, 0, 262139, 327680, 0, 196603, 327680, 0, 131067, 327680, 0, 65531, 327680, 0, -5, 327680, 0, -65541, 327680, 0, -131077, 327680, 0, -196613, 327680, 0, -262149, 327680, 0, -262148, 327680, 0, -262147, 327680, 0, -262146, 327680, 0, -262145, 327680, 0, -327680, 327680, 0, -327679, 327680, 0, -327678, 327680, 0, -327677, 327680, 0, 327678, 327680, 0, 393214, 327680, 0, 458750, 327680, 0, 524286, 327680, 0)

[node name="DoorCollider" type="Area2D" parent="."]
position = Vector2(-15, -151)
rotation = 1.57079
collision_layer = 0
collision_mask = 4
script = ExtResource("3_cg03b")

[node name="Door" type="CollisionShape2D" parent="DoorCollider"]
position = Vector2(9.5, -1)
rotation = 1.57079
shape = SubResource("RectangleShape2D_qbpct")
one_way_collision_margin = 128.0

[node name="Deco" type="Node2D" parent="."]
z_index = 1

[node name="SmallContainer" parent="Deco" instance=ExtResource("4_x5hcd")]
position = Vector2(-133, 101)

[node name="LargeContainer" parent="Deco" instance=ExtResource("5_i2w3a")]
position = Vector2(-116, 98)

[node name="SmallContainer2" parent="Deco" instance=ExtResource("4_x5hcd")]
position = Vector2(104, 19)

[node name="LargeContainer2" parent="Deco" instance=ExtResource("5_i2w3a")]
position = Vector2(-68, -102)

[node name="SmallContainer3" parent="Deco" instance=ExtResource("4_x5hcd")]
position = Vector2(-77, -90)

[node name="SmallContainer4" parent="Deco" instance=ExtResource("4_x5hcd")]
position = Vector2(-55, -90)

[node name="SmallContainer5" parent="Deco" instance=ExtResource("4_x5hcd")]
position = Vector2(-132, -138)

[node name="LargeContainer3" parent="Deco" instance=ExtResource("5_i2w3a")]
position = Vector2(95, -137)

[node name="SmallPipe" parent="." instance=ExtResource("6_8s0j3")]
position = Vector2(-128, -5)

[node name="SmallPipe2" parent="." instance=ExtResource("6_8s0j3")]
position = Vector2(-128, -64)

[node name="SmallPipe3" parent="." instance=ExtResource("6_8s0j3")]
position = Vector2(100, -5)
scale = Vector2(-0.184, -0.184)

[node name="SmallPipe4" parent="." instance=ExtResource("6_8s0j3")]
position = Vector2(100, -64)
scale = Vector2(-0.184, -0.184)

[node name="DoorOpen" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_ahbx5")

[node name="DoorClose" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_e0jl1")

[connection signal="body_entered" from="DoorCollider" to="." method="_on_door_collider_body_entered"]
